<resources>
    <string name="app_name">TaskList</string>

    <string name="task_delete_title">Delete Task</string>
    <string name="task_delete_message">Are you sure you want to delete this task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="add_new_title">Add Task</string>
    <string name="add_new_name_hint">Name</string>
    <string name="add_new_category_hint">Category</string>
    <string name="add_new_pick_date">Pick Date</string>
    <string name="add_new_add_button">Add</string>
</resources>
